# pincel

./: .gitignore  CMakeLists.common.txt  CMakeLists.macos.txt  CMakeLists.txt  CMakeLists.webassembly.txt  CMakeLists.windows.txt  Makefile  README.md  conanfile.py
.github/workflows/: release.yaml  webassembly.yaml
cartridge/blobs/atlas/: char.lua  world.lua
cartridge/blobs/fonts/: rpg.lua
cartridge/objects/: char.lua  enemy.lua  player.lua
cartridge/scenes/: test.lua
cartridge/scripts/: main.lua
cartridge/stages/: test.lua
src/: animator.cpp  animator.hpp  application.cpp  atlas.cpp  atlas.hpp  atlasregistry.cpp  atlasregistry.hpp  cassette.cpp  cassette.hpp  collidable.hpp  common.hpp  compat.cpp  compat.hpp  compositor.cpp  compositor.hpp  dirtable.hpp  engine.cpp  engine.hpp  filesystem.cpp  filesystem.hpp  font.cpp  font.hpp  gamepad.cpp  gamepad.hpp  helper.hpp  identifiable.hpp  io.cpp  keyboard.cpp  keyboard.hpp  lookupable.hpp  main.cpp  manager.cpp  manager.hpp  miniaudio.cpp  mouse.cpp  mouse.hpp  object.cpp  object.hpp  pixmap.cpp  pixmap.hpp  (+28 more)
